<resources>
	<string name="app_name">NUK Time Table</string>
	<string name="test">The Quick brown Fox jumps over the lazy dog</string>
	<string name="user_name">User Name:</string>
	<string name="password">Password:</string>
	<string name="action_logout">Logout</string>
	<string name="action_reload">Reload</string>
	<string name="action_about">About</string>
	<string name="action_info">Info</string>
	<string name="action_help">Help</string>
	<string name="action_preview">Preview Courses</string>
	<string name="action_course_selection">Courses Selected</string>
	<string name="action_e_learning">E-Learning Courses</string>
	<string name="action_get_latest">Get Latest</string>
	<string name="login">Login</string>
	<string name="exit">Exit</string>
	<string name="clear">Clear</string>
	<string name="creator">Creator: Joseph Yu</string>
	<string name="author">Joseph Yu</string>
	<string name="username_missing">Username missing</string>
	<string name="password_missing">Password missing</string>
	<string name="network_issue">No Internet Access</string>
	<string name="logging_in">Logging In</string>
	<string name="verifying">Verifying Login Credentials</string>
	<string name="success">Success</string>
	<string name="fail">Fail</string>
	<string name="login_fail">Login Fail</string>
	<string name="reload_fail">Reload Fail</string>
	<string name="wrong_username_password">Wrong Username/Password</string>
	<string name="connection_timeout">Connection Timeout. Check your Internet Connection</string>
	<string name="ok">OK</string>
	<string name="info">Information</string>
	<string name="info_message">B01: 綜合大樓
		\nC01: 工學院
		\nC02: 理學院
		\nH1-H2: 人文社會科學院
		\nK01: 體育健康休閒大樓
		\nL01: 圖書資訊大樓
		\nL02: 法學院
		\nM01: 管理學院
	</string>
	<string name="about">About</string>
	<string name="about_message">This Application is made a student in National University of Kaohsiung.
		\nIf you find a bug, leave a comment. It will be fixed asap
	</string>
	<string name="refresh_fail">Refresh fail, try again!</string>
	<string name="version">v1.0.0</string>

	<!-- week days -->
	<string name="monday_abbr">Mon</string>
	<string name="tuesday_abbr">Tue</string>
	<string name="wednesday_abbr">Wed</string>
	<string name="thursday_abbr">Thu</string>
	<string name="friday_abbr">Fri</string>
	<string name="saturday_abbr">Sat</string>
	<string name="sunday_abbr">Sun</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">WednesDay</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>

	<!-- blocks -->
	<string name="blockx">X</string>
	<string name="block1">1</string>
	<string name="block2">2</string>
	<string name="block3">3</string>
	<string name="block4">4</string>
	<string name="blocky">Y</string>
	<string name="block5">5</string>
	<string name="block6">6</string>
	<string name="block7">7</string>
	<string name="block8">8</string>
	<string name="block9">9</string>
	<string name="block10">10</string>
	<string name="block11">11</string>
	<string name="block12">12</string>
	<string name="block13">13</string>

	<!-- time period -->
	<string name="time_period">Time</string>
	<string name="timex_1">07:05</string>
	<string name="timex_2">07:55</string>
	<string name="time1_1">08:05</string>
	<string name="time1_2">08:55</string>
	<string name="time2_1">09:05</string>
	<string name="time2_2">09:55</string>
	<string name="time3_1">10:10</string>
	<string name="time3_2">11:00</string>
	<string name="time4_1">11:10</string>
	<string name="time4_2">12:00</string>
	<string name="timey_1">12:10</string>
	<string name="timey_2">13:00</string>
	<string name="time5_1">13:10</string>
	<string name="time5_2">14:00</string>
	<string name="time6_1">14:10</string>
	<string name="time6_2">15:00</string>
	<string name="time7_1">15:15</string>
	<string name="time7_2">16:05</string>
	<string name="time8_1">16:20</string>
	<string name="time8_2">17:10</string>
	<string name="time9_1">17:20</string>
	<string name="time9_2">18:10</string>
	<string name="time10_1">18:20</string>
	<string name="time10_2">19:10</string>
	<string name="time11_1">19:15</string>
	<string name="time11_2">20:05</string>
	<string name="time12_1">20:10</string>
	<string name="time12_2">21:00</string>
	<string name="time13_1">21:05</string>
	<string name="time13_2">21:55</string>

	<!-- examples -->
	<string name="class_name_example">電子電路工程實驗(二)</string>
	<string name="course_id">EEB04B</string>
	<string name="classroom">C01-301-1</string>

	<string name="title_activity_help">Help</string>
	<string name="help_title">New Feature</string>
	<string name="help1">Click</string>
	<string name="help2">To make it</string>
	<string name="help3">then</string>
	<string name="help4">To Get Latest Schedule</string>
	<string name="help5">Logout is hidden in menu</string>
	<string name="help_icon_description">Help Icon</string>
	<string name="help_understand">I Understand!!</string>
</resources>
