<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="com.kiddos.nuktimetable.MainActivity">
	<item android:id="@+id/action_logout"
		  android:title="@string/action_logout"
		  android:orderInCategory="100"
		  android:icon="@drawable/ic_exit_to_app_white_24dp"
		  android:showAsAction="never"/>
	<item android:id="@+id/action_reload"
		  android:title="@string/action_reload"
		  android:icon="@drawable/ic_autorenew_white_24dp"
		  android:orderInCategory="100"
		  android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_help"
		  android:title="@string/action_help"
		  android:orderInCategory="6"
		  android:showAsAction="never"/>
	<item android:id="@+id/action_info"
		  android:title="@string/action_info"
		  android:orderInCategory="5"
		  android:showAsAction="never"/>
	<item android:id="@+id/action_about"
		  android:title="@string/action_about"
		  android:orderInCategory="4"
		  android:showAsAction="never"/>
	<item android:id="@+id/action_preview"
		  android:title="@string/action_preview"
		  android:orderInCategory="3"
		  android:showAsAction="never"/>
	<item android:id="@+id/action_course_selected"
		  android:title="@string/action_course_selection"
		  android:orderInCategory="2"
		  android:showAsAction="never"/>
	<item android:id="@+id/action_e_learning"
		  android:title="@string/action_e_learning"
		  android:orderInCategory="1"
		  android:showAsAction="never"/>
</menu>
