<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
			    android:orientation="vertical"
				tools:context="com.kiddos.nuktimetable.LoginFragment">

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:gravity="center"
			android:orientation="vertical"
			android:id="@+id/mainLayout">
		<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="25dp"
				android:layout_marginBottom="10dp"
				android:inputType="text"
				android:textColor="@color/normal_text"
				android:hint="@string/user_name"
				android:textColorHint="@color/hint_text"
				android:id="@+id/etUserName"/>
		<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="10dp"
				android:inputType="textPassword"
				android:textColor="@color/normal_text"
				android:hint="@string/password"
				android:textColorHint="@color/hint_text"
				android:id="@+id/etPassword"/>
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center"
				android:id="@+id/buttonLayout">
			<Button
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="10dp"
					android:layout_marginRight="10dp"
					android:layout_gravity="center_vertical"
					android:text="@string/login"
					style="@style/ButtonStyle"
					android:id="@+id/btnLogin"/>
			<Button
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10dp"
					android:layout_marginLeft="10dp"
					android:layout_gravity="center_vertical"
					android:text="@string/clear"
					style="@style/ButtonStyle"
					android:id="@+id/btnClear"/>
		</LinearLayout>
	</LinearLayout>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:layout_alignParentBottom="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/creator"
			android:textColor="@color/normal_text"
			android:id="@+id/tvCreator" />
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/mainLayout"
			android:layout_centerHorizontal="true"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/app_name"
			android:textColor="@color/normal_text"
			android:id="@+id/tvTitle"/>
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/tvTitle"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:contentDescription="@string/app_name"
			android:id="@+id/imageView"
			android:src="@drawable/nuk_icon"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/tvTitle"
			android:layout_toEndOf="@+id/tvTitle"
			android:layout_toRightOf="@+id/tvTitle"
			android:layout_marginStart="15dp"
			android:layout_marginLeft="15dp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/version"
			android:textColor="@color/normal_text"
			android:id="@+id/tvVersion"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/mainLayout"
			android:layout_marginTop="20dp"
			android:gravity="center"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/error_text"
			android:id="@+id/tvErrorMsg"/>
</RelativeLayout>
