<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/theme_background"
				tools:context="com.kiddos.nuktimetable.HelpActivity"
				android:layout_gravity="start|top">

	<TextView android:id="@+id/help_title"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:keepScreenOn="true"
			  android:textColor="@color/theme_text_highlight2"
			  android:textStyle="bold"
			  android:textSize="50sp"
			  android:gravity="center"
			  android:layout_marginTop="20dp"
			  android:layout_alignParentLeft="true"
			  android:layout_alignParentStart="true"
			  android:layout_alignParentRight="true"
			  android:layout_alignParentEnd="true"
			  android:text="@string/help_title"/>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/help_star_layout"
			android:orientation="vertical"
			android:layout_below="@id/help_title"
			android:layout_marginTop="30dp">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:paddingStart="20dp"
				android:paddingEnd="20dp"
				android:orientation="horizontal">
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/HelpTextStyle"
					android:text="@string/help1"
					android:id="@+id/tvHelp1"/>
			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/ivUnselectedStar"
					android:layout_gravity="center_horizontal|top"
					android:contentDescription="@string/help_icon_description"
					android:background="@drawable/ic_star_border_white_24dp"
					android:scaleType="center"/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/HelpTextStyle"
					android:text="@string/help2"
					android:id="@+id/tvHelp2"/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/ivSelectedStar"
					android:contentDescription="@string/help_icon_description"
					android:background="@drawable/ic_star_white_24dp"
					android:scaleType="center"/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/HelpTextStyle"
					android:text="@string/help3"
					android:id="@+id/tvHelp3"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:paddingStart="20dp"
				android:paddingEnd="20dp"
				android:orientation="horizontal">
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/HelpTextStyle"
					android:text="@string/help1"/>
			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/ivRefresh"
					android:layout_gravity="center_horizontal|top"
					android:contentDescription="@string/help_icon_description"
					android:background="@drawable/ic_autorenew_white_24dp"
					android:scaleType="center"/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/HelpTextStyle"
					android:text="@string/help4"
					android:id="@+id/tvHelp4"/>

		</LinearLayout>

	</LinearLayout>
	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/help5"
			android:layout_below="@id/help_star_layout"
			android:layout_marginTop="20dp"
			android:padding="10dp"
			android:gravity="center"
			android:textColor="@color/theme_text_highlight"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/tvHelp5"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_below="@id/tvHelp5"
			android:background="@color/theme_background_dark"
			android:padding="2dp">
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:id="@+id/ivHelpHidden"
				android:contentDescription="@string/help_icon_description"
				android:background="@drawable/help_logout_location"
				android:scaleType="fitCenter"/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:gravity="center"
			android:paddingTop="10dp"
			android:paddingBottom="10dp">

		<Button android:id="@+id/btnUnderstand"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="15dp"
				android:textColor="@color/theme_text_highlight2"
				android:textSize="20sp"
				style="@style/ButtonStyle"
				android:text="@string/help_understand"/>
	</LinearLayout>
</RelativeLayout>
