<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:layout_weight="1"
			  android:layout_marginTop="1dp"
			  android:layout_marginBottom="1dp"
			  android:paddingTop="30dp"
			  android:paddingBottom="30dp"
			  android:paddingLeft="3dp"
			  android:paddingRight="3dp"
			  android:background="@color/theme_background"
			  android:gravity="center">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_gravity="center"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/timex_1"
			android:textColor="@color/theme_text_highlight2"
			android:id="@+id/tvTime1"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/blockx"
			android:textColor="@color/theme_text"
			android:textStyle="bold"
			android:id="@+id/tvBlock"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_gravity="center"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/timex_2"
			android:textColor="@color/theme_text_highlight2"
			android:id="@+id/tvTime2"/>
</LinearLayout>