<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context="com.kiddos.nuktimetable.MainFragment">

	<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/titleTable">
		<TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="3dp"
				style="@style/RowStyle"
				android:background="@color/theme_background">
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="6dp"
					android:layout_marginEnd="6dp"
					android:layout_column="0"
					android:gravity="center"
					style="@style/RowItemStyle"
					android:text="@string/time_period"/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="3dp"
					android:layout_marginEnd="3dp"
					style="@style/RowItemStyle"
					android:text="@string/monday_abbr"/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="3dp"
					android:layout_marginEnd="3dp"
					style="@style/RowItemStyle"
					android:text="@string/tuesday_abbr"/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="3dp"
					android:layout_marginEnd="3dp"
					style="@style/RowItemStyle"
					android:text="@string/wednesday_abbr"/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="3dp"
					android:layout_marginEnd="3dp"
					style="@style/RowItemStyle"
					android:text="@string/thursday_abbr"/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="3dp"
					android:layout_marginEnd="3dp"
					style="@style/RowItemStyle"
					android:text="@string/friday_abbr"/>
		</TableRow>
	</TableLayout>
	<ScrollView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/titleTable"
			android:id="@+id/scrollView">
		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
			<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="match_parent"
					android:weightSum="6">
				<LinearLayout
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						android:layout_weight="1"
						android:weightSum="15">
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
					<include layout="@layout/block_item"/>
				</LinearLayout>
				<LinearLayout
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:weightSum="15">
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
				</LinearLayout>
				<LinearLayout
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:weightSum="15">
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
				</LinearLayout>
				<LinearLayout
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:weightSum="15">
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
				</LinearLayout>
				<LinearLayout
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:weightSum="15">
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
				</LinearLayout>
				<LinearLayout
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:weightSum="15">
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
					<include layout="@layout/class_item" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<TextView android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:id="@+id/test"/>
</RelativeLayout>
